# discordia

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: Cargo.toml
src/: affinity.rs  anima.rs  embed.rs  formatting.rs  main.rs  music.rs  orchestra.rs  redis.rs  response.rs  tags.rs  user.rs  utils.rs
src/commands/: misc.rs  mod.rs  music.rs  state.rs
src/database/: anima.rs  mod.rs
