[package]
name = "discordia"
version = "0.1.0"
authors = ["Filippo Ziche <filippo.ziche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.17.0"
dotenv = "0.15.0"
rand = "0.7.3"
prettytable-rs = "0.8.0"

tokio = { version = "0.2.22", features = ["macros", "tcp", "dns", "io-util"] }

# Bella twilight
twilight-cache-inmemory = "0.1"
twilight-gateway = "0.1"
twilight-http = "0.1"
twilight-model = "0.1"

twilight-lavalink = "0.1"
reqwest = { features = ["json"], version = "0.10" }